# chroma

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  README.md  chroma.py
apps/viewer/: CMakeLists.txt
assets/: CMakeLists.txt
assets/models/cloth/: cloth.mtl
assets/models/shapes/: shapes.mtl
cmake/: FindVulkan.cmake
components/chroma/: CMakeLists.txt  README.md  chroma_api_impl.h
components/chroma/benchmark/: CMakeLists.txt  benchmark_chroma.cpp  performance_counters.h
components/chroma/include/chroma/: scene.h  skybox.h  viewport.h
components/chroma/include/chroma/details/: chroma_api.h
components/chroma/src/: chroma_api_impl.h  idevice.h  idevice_buffer.h  idevice_program.h  idevice_program_input.h  idevice_texture.h
components/chroma/test/: CMakeLists.txt  chroma_test.cpp  chroma_test_exposure.cpp  depth_test.cpp
components/display/: CMakeLists.txt
components/display/include/display/: event.h  window.h
components/display/src/: main.cpp  window.cpp
components/global/display/: CMakeLists.txt
components/global/math/: CMakeLists.txt
components/global/utils/: CMakeLists.txt
components/gui/: CMakeLists.txt
components/gui/src/: window.cpp
components/libchroma/src/: buffer_accessor.h  device_buffer-.h  device_color_format.h  device_resource.h  idevice.h  idevice_attribute.h  idevice_buffer.h  idevice_program.h  idevice_program_input.h  idevice_program_input_slot.h  idevice_texture.h  idevice_texture_sampler.h
components/math/: CMakeLists.txt
components/math/benchmark/: benchmark_fast.cpp  (+1 more)
components/minigl/: CMakeLists.txt
components/minigl/include/minigl/: minigl.h
components/minigl/src/: minigl.cpp  minigl_core_darwin_impl.s  minigl_core_linux_impl.s  minigl_core_windows_impl.s  minigl_darwin.cpp  minigl_linux.cpp  minigl_windows.cpp  private_minigl.h
components/minigl/tests/: opengl_support.cpp  opengl_support.hpp  test_minigl.cpp
components/numeric/: CMakeLists.txt
components/numeric/benchmark/: benchmark_fast.cpp  performance_counters.h
components/numeric/include/numeric/: fast.h  half.h  mat2.h  mat3.h  mat4.h  norm.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
components/numeric/include/numeric/details/: compiler.h  matrix_helpers.h  quaternion_helpers.h  vector_helpers.h
components/numeric/test/: test_fast.cpp  test_half.cpp  test_mat.cpp  test_quat.cpp  test_vec.cpp
components/render/: CMakeLists.txt
components/render/src/: buffer_accessor.h  device_basic_types.h  device_buffer-.h  device_color_format.h  device_resource.h  device_types.h  ibuffer.h  idevice.h  idevice_attribute.h  idevice_buffer.h  idevice_program.h  idevice_program_input.h  idevice_program_input_slot.h  idevice_program_output.h  idevice_program_output_swapchain.h  idevice_program_output_targets.h  idevice_resource.h  idevice_texture.h  idevice_texture_sampler.h  vulkan_adequacy.cpp  vulkan_adequacy.h  vulkan_api.cpp  vulkan_api.h  vulkan_buffer.h  vulkan_debug_marker.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.h  vulkan_framebuffer_attachment.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_proc.cpp  vulkan_proc.h  vulkan_properties.cpp  vulkan_properties.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_types.cpp  vulkan_types.h  vulkan_ui_layer.h  (+2 more)
components/render/src/ss/: vulkan_debug_marker.cpp  vulkan_debug_marker.h  vulkan_extension_properties.cpp  vulkan_extension_properties.h  vulkan_validation_layers.cpp  vulkan_validation_layers.h
components/system/: CMakeLists.txt
components/system/benchmark/: benchmark_calls.cpp  benchmark_memcpy.cpp  performance_counters.h
components/system/include/system/: c_str.h  compiler.h  container.h  deleter.h  maybe.h  noncopyable.h  optional.h  path.h  profiler.h  strings.h  thread_storage.h
components/system/src/: c_str.cpp  path.cpp  profiler.cpp  stdtypes.h  strings.cpp
components/system/test/: test_path.cpp  test_string.cpp  test_utils_main.cpp
components/utils/: CMakeLists.txt
components/utils/benchmark/: benchmark_callee.cpp  benchmark_calls.cpp  performance_counters.h
components/utils/include/utils/: compiler.h  cstring.h  path.h  profiler.h
components/utils/src/: ashmem.cpp  cstring.cpp  path.cpp  profiler.cpp
components/utils/src/darwin/: path.cpp.inc
components/utils/src/linux/: path.cpp.inc
components/utils/src/win32/: path.cpp.inc
components/utils/test/: test_Path.cpp  test_utils_main.cpp
demo/: CMakeLists.txt  main.cpp
demo/src/: main.cpp
demo/viewer/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  assets.vcxproj  assets.vcxproj.filters  cmake_install.cmake
demo/viewer/src/: main.cpp
editor/: CMakeLists.txt
editor/src/: main.cpp
global/display/: CMakeLists.txt
global/math/: CMakeLists.txt
global/math/benchmark/: performance_counters.h
global/math/include/math/: half.h  mat2.h  mat3.h  mat4.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
global/math/include/math/details/: compiler.h  matrix_helpers.h  quaternion_helpers.h
global/math/test/: test_fast.cpp  test_vec.cpp
global/utils/: CMakeLists.txt
src/: CMakeLists.txt
src/libchroma/: CMakeLists.txt  README.md
src/src/: buffer_accessor.h  ibuffer.h  idevice.h  idevice_attribute.h  idevice_basic_types.h  idevice_buffer.h  idevice_color_format.h  idevice_image_format.h  idevice_program.h  idevice_program_input.h  idevice_program_input_slot.h  idevice_program_output.h  idevice_program_output_swapchain.h  idevice_program_output_target.h  idevice_program_output_target_channel.h  idevice_program_output_targets.h  idevice_program_shader.h  idevice_resource.h  idevice_state.h  idevice_states.h  idevice_target.h  idevice_texture.h  idevice_texture_sampler.h
tools/resc/: CMakeLists.txt
tools/resc/include/resc/: resc_api.h
tools/resc/src/: commandline_config.cpp  commandline_config.h  commandline_input.cpp  commandline_input.h  commandline_output.cpp  commandline_output.h  icompiler.cpp  icompiler.h  iconfig.h  lexeme.h  lexer.h  main.cpp  resc_api.cpp  resource_compiler.cpp  resource_compiler.h  shader_compiler.cpp  shader_compiler.h
(+92 files in other folders)
